fix: openapi json file
